--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,5 +1,27 @@
-header {
+body {
+    margin: 0;
+    background-image: url("record.png");
+    background-repeat: repeat;
+}
+
+/* header {
     background-color: navy;
     color: tan;
     text-align: center;
+}
+
+main {
+    background-color: lightgray;
+    padding: 1em;
+} */
+
+.banner {
+    background-color: navy;
+    color: tan;
+    text-align: center;
+}
+
+.mainInfo {
+    background-color: lightgray;
+    padding: 1em;
 }
